promotion card polishing, pre re-name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				class="logo"
 				src="img/logo.svg" 
 				alt="logo">
-			<div class="main_nav">
+			<nav class="main_nav">
 				<ul class="nav-bar__menu">
 					<li><a class="nav nav-menu" href="#!">Museums</a></li>
 					<li><a class="nav nav-menu" href="#!">how it works</a></li>
@@ -23,24 +23,24 @@
 					<li><a class="nav nav-menu" href="#!">contact</a></li>
 				</ul>
 
-				<div class="nav__dropdown">
+				<nav class="nav__dropdown">
 					<a class="lang--active" href="#!">en<img 
 						class="dropbtn" 
 						src="components/img/dropbtn@2x.png"
 						srcset="components/img/dropbtn@2x.png 2x"
 						alt=""></a>
-					<div class="nav-bar__language">
+					<nav class="nav-bar__language">
 						<a class="lang" href="#!">ca</a>
 						<a class="lang" href="#!">es</a>
 						<a class="lang" href="#!">fr</a>
 						<a class="lang" href="#!">it</a>
 						<a class="lang" href="#!">de</a>
-					</div>
-				</div>
+					</nav>
+				</nav>
 				<div class="purchasebutton">
 					<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
 				</div>
-			</div>
+			</nav>
 		</header>
 
 		<section class="featured">
@@ -89,15 +89,15 @@
 		</section>
 
 		<section class="slogans">
-			<div class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
+			<p class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</p>
 
-			<div class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</div>
+			<p class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</p>
 		</section>
 
 		<section class="museums">
 			<h2 class="section__header">Museums Included</h2>
 			<div class="museum__grid">
-				<div class="museum__card">
+				<article class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-cccb.jpg 2x"
@@ -105,8 +105,8 @@
 							alt="CCCB">
 					<h3 class="museum__name">CCCB</h3>
 					<p class="museum__summary">CCCB is a space that aims to bring culture to the neighbourhood by staging inclusive exhibitions and activities that focus on the city and contemporary culture, such as film, music, performing arts and experimental art.</p>
-				</div>
-				<div class="museum__card">
+				</article>
+				<article class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-miro.jpg 2x"
@@ -114,8 +114,8 @@
 							alt="fundacio joan miro">
 					<h3 class="museum__name">FUNDACIÓ JOAN MIRÓ</h3>
 					<p class="museum__summary">The Fundació Joan Miró is a space that showcases the artist’s work alongside other contemporary pieces that help to maintain Joan Miró’s unique artistic legacy alive.</p>
-				</div>
-				<div class="museum__card">
+				</article>
+				<article class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-picasso.jpg 2x"
@@ -123,8 +123,8 @@
 							alt="museu picasso">
 					<h3 class="museum__name">Museu Picasso</h3>
 					<p class="museum__summary">Immerse yourself in Pablo Picasso’s formative years with this comprehensive collection that clearly reflects his Blue Period, as well as other amazing paintings from 1917 and his “Las Meninas” series.</p>
-				</div>
-				<div class="museum__card">
+				</article>
+				<article class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-antoni.jpg 2x"
@@ -132,8 +132,8 @@
 							alt="fundacio antoni tapies">
 					<h3 class="museum__name">FUNDACIÓ ANTONI TÀPIES</h3>
 					<p class="museum__summary">The Funcacio Antoni Tapies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tapies' work.</p>
-				</div>
-				<div class="museum__card">
+				</article>
+				<article class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-nacional.jpg 2x"
@@ -141,8 +141,8 @@
 							alt="Museu Nacional">
 					<h3 class="museum__name">Museu Nacional</h3>
 					<p class="museum__summary">This museum displays the world’s best collection of Romanesque frescoes. Containing works by great European painters such as Rubens, Velázquez and El Greco, it is also a leading centre of Modernista art.</p>
-				</div>
-				<div class="museum__card">
+				</article>
+				<article class="museum__card">
 					<img 
 							class="museum__img"
 							srcset="img/museu-macba.jpg 2x"
@@ -150,12 +150,12 @@
 							alt="MACBA">
 					<h3 class="museum__name">MACBA</h3>
 					<p class="museum__summary">This iconic building designed by Richard Meier features fascinating exhibitions for art lovers and a permanent collection containing works by Basquiat, Calder and Juan Munoz, amon others.</p>
-				</div>
+				</article>
 			</div>
 		</section>
 
 		<section class="pass">
-			<div class="pass__card">
+			<article class="pass__card">
 				<h2 class="pass__heading">Meet <br>the Pass</h2>
 				<p class="pass__text">Discover the finest collection of Romanesque mural paintings in the world, enjoy Modernisme, and be surprised by the most contemporary art and creation. The universes of Miró, Picasso and Tàpies await you as you embark upon this unique experience – without queuing or waiting.</p>
 				<a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a>
@@ -164,25 +164,25 @@
 					Questions? Check our FAQ</a>
 					<img src="img/arrow-right.svg" alt="">
 				</div>
-			</div>
-			<div class="pass__card">
+			</article>
+			<article class="pass__card">
 				<img class="pass__img" src="img/passport-cover.jpg" alt="passport detail photo">
-			</div>
-			<div class="pass__card">
+			</article>
+			<article class="pass__card">
 				<img class="pass__img" src="img/museum-locations.jpg" alt="passport detail photo">
-			</div>
-			<div class="pass__card">
+			</article>
+			<article class="pass__card">
 				<img class="pass__img" src="img/musem-pass.jpg" alt="passport detail photo">
-			</div>
-			<div class="pass__card">
+			</article>
+			<article class="pass__card">
 				<img class="pass__img" src="img/passport-stamp.jpg" alt="passport detail photo">
-			</div>
+			</article>
 		</section>
 
 		<section class="how">
 			<h2 class="section__header">How it works</h2>
 			<div class="how__grid">
-				<div class="how__step">
+				<article class="how__step">
 					<p class="how__step">01</p>
 					<div class="icon-arrow">
 						<img class="icon--purchase"
@@ -192,8 +192,8 @@
 					</div>
 					<h4 class="how__stepheader">Purchase your Articket in just a few clicks</h4>
 					<p class="how__stepsummary">You will receive a voucher in your email to print or save on your phone</p>
-				</div>
-				<div class="how__step">
+				</article>
+				<article class="how__step">
 					<p class="how__step">02</p>
 					<div class="icon-arrow">
 						<img class="icon--purchase"
@@ -203,8 +203,8 @@
 					</div>
 					<h4 class="how__stepheader">Pick up your passport in any of the 6 museums</h4>
 					<p class="how__stepsummary">Use the preferent access of any museum and exchange your voucher for the Articket passport.</p>
-				</div>
-				<div class="how__step">
+				</article>
+				<article class="how__step">
 					<p class="how__step">03</p>
 					<div class="icon-arrow">
 						<img class="icon--purchase"
@@ -214,7 +214,7 @@
 					</div>
 					<h4 class="how__stepheader">Get your first stamp and start your journey!</h4>
 					<p class="how__stepsummary">Avoid waiting times and queues. Start enjoying the best art in Barcelona!</p>
-				</div>
+				</article>
 			</div>
 			<div class="how__buy"><a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a></div>
 		</section>
@@ -272,61 +272,59 @@
 			</div>
 		</section>
 
-		<footer class="footer1">
-			<div class="footer">
-				<div class="footer-col1">
-					<ul class="footer-menu">
-						<li><img 
-								class="footer-logo"
-								srcset="img/logo-white.svg 1.5x"
-								src="img/logo-white.svg" 
-								alt="logo"></li>
-						<li><a href="#!" class="footer-menu__item">Privacy Policy</a></li>
-						<li><a href="#!" class="footer-menu__item">Legal notice</a></li>
-						<li><a href="#!" class="footer-menu__item">Cookies policy</a></li>
-					</ul>
-				</div>
-				<div class="footer-col2">
-					<ul class="footer-menu">
-						<li><a href="#!" class="footer-menu__item">Museu Nacional</a></li>
-						<li><a href="#!" class="footer-menu__item">Museu Picasso</a></li>
-						<li><a href="#!" class="footer-menu__item">MACBA</a></li>
-						<li><a href="#!" class="footer-menu__item">CCCB</a></li>
-						<li><a href="#!" class="footer-menu__item">Fundació Joan Miró</a></li>
-						<li><a href="#!" class="footer-menu__item">Fundació Antoni Tapies</a></li>
-					</ul>
-				</div>
-				<div class="footer-col3">
-					<ul class="footer-menu">
-						<li><a href="#!" class="footer-menu__item">How it works</a></li>
-						<li><a href="#!" class="footer-menu__item">Barcelona Routes</a></li>
-						<li><a href="#!" class="footer-menu__item">F.A.Q.</a></li>
-					</ul>
-				</div>
-				<div class="footer-col4">
-					<ul class="footer-menu">
-						<li><a href="#!" class="footer-menu__item">Buy safely</a></li>
-						<li><img 
-							class="footer-icon"
-							srcset="img/secure-1.svg 2x"
-							src="img/secure-1.svg" 
-							alt="secure payments"
-							></li>
-					</ul>
-				</div>
-				<div class="footer-col5">
-					<ul class="footer-menu">
-						<li>
-							<div class="footer-socials">
-								<a href="#!" class="fa fa-facebook"></a>
-								<a href="#!" class="fa fa-instagram"></a>
-								<a href="#!" class="fa fa-twitter"></a>
-							</div>
-						</li>
-						<li><p class="footer-menu__item">Design and web development:</p>
-						<a href="#!" class="footer-menu__item copyright">Copymouse Studio</a></li>
-					</ul>
-				</div>
+		<footer class="footer">
+			<div class="footer-col1">
+				<ul class="footer-menu">
+					<li><img 
+							class="footer-logo"
+							srcset="img/logo-white.svg 1.5x"
+							src="img/logo-white.svg" 
+							alt="logo"></li>
+					<li><a href="#!" class="footer-menu__item">Privacy Policy</a></li>
+					<li><a href="#!" class="footer-menu__item">Legal notice</a></li>
+					<li><a href="#!" class="footer-menu__item">Cookies policy</a></li>
+				</ul>
+			</div>
+			<div class="footer-col2">
+				<ul class="footer-menu">
+					<li><a href="#!" class="footer-menu__item">Museu Nacional</a></li>
+					<li><a href="#!" class="footer-menu__item">Museu Picasso</a></li>
+					<li><a href="#!" class="footer-menu__item">MACBA</a></li>
+					<li><a href="#!" class="footer-menu__item">CCCB</a></li>
+					<li><a href="#!" class="footer-menu__item">Fundació Joan Miró</a></li>
+					<li><a href="#!" class="footer-menu__item">Fundació Antoni Tapies</a></li>
+				</ul>
+			</div>
+			<div class="footer-col3">
+				<ul class="footer-menu">
+					<li><a href="#!" class="footer-menu__item">How it works</a></li>
+					<li><a href="#!" class="footer-menu__item">Barcelona Routes</a></li>
+					<li><a href="#!" class="footer-menu__item">F.A.Q.</a></li>
+				</ul>
+			</div>
+			<div class="footer-col4">
+				<ul class="footer-menu">
+					<li><a href="#!" class="footer-menu__item">Buy safely</a></li>
+					<li><img 
+						class="footer-icon"
+						srcset="img/secure-1.svg 2x"
+						src="img/secure-1.svg" 
+						alt="secure payments"
+						></li>
+				</ul>
+			</div>
+			<div class="footer-col5">
+				<ul class="footer-menu">
+					<li>
+						<div class="footer-socials">
+							<a href="#!" class="fa fa-facebook"></a>
+							<a href="#!" class="fa fa-instagram"></a>
+							<a href="#!" class="fa fa-twitter"></a>
+						</div>
+					</li>
+					<li><p class="copyright">Design and web development:</p>
+					<a href="#!" class="copyright copyright--link">Copymouse Studio</a></li>
+				</ul>
 			</div>
 		</footer>
 </body>
