--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-		<header class="header">
+		<header class="header header--fixed">
 			<img 
 				class="logo"
 				src="img/logo.svg" 
@@ -220,7 +220,7 @@
 		</section>
 
 		<section class="promotion">
-			<div class="promotioncard2">
+			<div class="promotioncard">
 				<div class="promotion--top">
 					<div class="promotion--header"><h2 class="promotion--header1">+100.000 artickets sold</h2><h2 class="promotion--header2">get yours!</h2></div>
 					<img 
