--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 		</section>
 
 		<section class="slogans">
-			<p class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</p>
+			<h6 class="slogan s1">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</h6>
 
-			<p class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</p>
+			<h6 class="slogan s2">&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt; SIX MUSEUMS | ONE PASS &gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;</h6>
 		</section>
 
 		<section class="museums">
@@ -165,18 +165,10 @@
 					<img src="img/arrow-right.svg" alt="">
 				</div>
 			</article>
-			<article class="pass__card">
-				<img class="pass__img" src="img/passport-cover.jpg" alt="passport detail photo">
-			</article>
-			<article class="pass__card">
-				<img class="pass__img" src="img/museum-locations.jpg" alt="passport detail photo">
-			</article>
-			<article class="pass__card">
-				<img class="pass__img" src="img/musem-pass.jpg" alt="passport detail photo">
-			</article>
-			<article class="pass__card">
-				<img class="pass__img" src="img/passport-stamp.jpg" alt="passport detail photo">
-			</article>
+				<img class="pass__card pass__img" src="img/passport-cover.jpg" alt="passport detail photo">
+				<img class="pass__card pass__img" src="img/museum-locations.jpg" alt="passport detail photo">
+				<img class="pass__card pass__img" src="img/musem-pass.jpg" alt="passport detail photo">
+				<img class="pass__card pass__img" src="img/passport-stamp.jpg" alt="passport detail photo">
 		</section>
 
 		<section class="how">
