fixed final errors to validate

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 		</section>
 
 		<section class="pass">
-			<article class="pass__card">
+			<div class="pass__card">
 				<h2 class="pass__heading">Meet <br>the Pass</h2>
 				<p class="pass__text">Discover the finest collection of Romanesque mural paintings in the world, enjoy Modernisme, and be surprised by the most contemporary art and creation. The universes of Miró, Picasso and Tàpies await you as you embark upon this unique experience – without queuing or waiting.</p>
 				<a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a>
@@ -164,7 +164,7 @@
 					Questions? Check our FAQ</a>
 					<img src="img/arrow-right.svg" alt="">
 				</div>
-			</article>
+			</div>
 				<img class="pass__card pass__img" src="img/passport-cover.jpg" alt="passport detail photo">
 				<img class="pass__card pass__img" src="img/museum-locations.jpg" alt="passport detail photo">
 				<img class="pass__card pass__img" src="img/musem-pass.jpg" alt="passport detail photo">
